--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,10 @@ jobs:
       - name: Install, Build and Deploy
         run: |
           npm ci
-          npm run deploy
+          npm run build
+          
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.7
+        with:
+          branch: gh-pages
+          folder: build
