--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,9 +28,12 @@
     "ecmaFeatures": {
       "jsx": true
     },
+    "project": "./tsconfig.json",
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "semi": "off"
+  }
 }
