--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "CI-test": "react-scripts test --watchAll=false --passWithNoTests"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
