--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,5 @@
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {
-    "sort-imports": "error"
-  }
+  "rules": {}
 }
