--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://coderscamp2021.github.io/team-lp-project-4",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.5",
     "@mantine/core": "^4.1.1",
     "@mantine/hooks": "^4.1.1",
     "@testing-library/jest-dom": "^5.16.3",
